--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
 .header img{
     width: 50px;
     height: auto;
+    position: relative;
+    top: 15px;
 }
 .header span{
     color: blue;
@@ -29,11 +31,11 @@
    padding: 15px;
    margin-top: -15px;
 }
-.main_content{
+.main{
     width: 250px;
     display: inline-block;
 }
-.main_content p{
+.main p{
     font-weight: 900;
     margin-left: 5px;
 }
@@ -59,6 +61,46 @@
 }
 .line{
     width: 250px;
-    background-color: black
+    background-color: black;
     float: center;
+}
+.reinvent{
+    background-image: url(ad_background.png);
+    height: 330px;
+    padding-top: 20px;
+    margin-top: 60px;
+}
+.reinvent h3{
+    font-size: 30px;
+    text-align: center;
+    color: white;
+    margin-top: -8px;
+}
+.reinvent button{
+    width: 90%;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 20px;
+    background-color: lightblue;
+    color: white;
+    margin: 10px;;
+}
+.reinvent img{
+    width: 100px;
+    display: block;
+    margin: 0 auto;
+}
+.main_header{
+    border-bottom: 1px solid grey;
+    padding-bottom: 10px;
+}
+.main_header img{
+    width: 20px;
+}
+.main_header h3{
+    display: inline-block;
+}
+.main_content{
+    display: inline-block;
+    width: 695px;
 }
